tests/Data/ValidCase/src/Context/Application/ValidWithEventCommand.php
<?php declare(strict_types=1);

namespace Tests\ValidCase\Context\Application;

final class ValidWithEventCommand implements \Mage\Bus\Contracts\Command\Command {}
