tests/Data/InvalidTypeCase/src/Context/Application/InvalidCommand.php
<?php declare(strict_types=1);

namespace Tests\InvalidTypeCase\Context\Application;

final class InvalidCommand implements \Mage\Bus\Contracts\Command\Command {}
